# me

./: .gitattributes  Cargo.toml  README.md  build.rs
docs/: ffmpeg_validation.md
misc/: offer.sdp  proxy_test_client.sh
misc/proxy_test_client/: build_protocol.sh  main.py  requirements.txt
protocols/control/: leg.proto  proxy.proto
src/: main.rs
