[package]
name = "me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.7.2"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = "0.7.8"
tonic = "0.9.2"
prost = "0.11.9"
log = "0.4.17"
env_logger = "0.10.0"
uuid = { version = "1.3.3", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
